@@ -193,9 +193,8 @@ quarter) with its two-byte encoding \.{c2 bc}.
 @z
 
 @x [6.59] l.708
-    if ((eight_bits)(*j)<0200) C_putc(*j);
+    if (ishigh(*j)) C_printf("%s",translit[(eight_bits)(*j)-0200]);
 @^high-bit character handling@>
-    else C_printf("%s",translit[(eight_bits)(*j)-0200]);
 @y
     if (ishigh(*j)) {
 @^high-bit character handling@>
@@ -206,7 +205,6 @@ quarter) with its two-byte encoding \.{c2 bc}.
       }
       C_printf("%s",translit[(eight_bits)(*j)-0200]);
     }
-    else C_putc(*j);
 @z
 
 @x [7.67] l.840
