@@ -1,3 +1,8 @@
+2025-04-17  Andreas Scherer  <https://ascherer.github.io>
+
+	* ctangleboot.cin,
+	* cwebboot.cin: Make proper use of 'ishigh' macro.
+
 2025-04-09  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctangleboot.cin,
